@@ -71,6 +71,16 @@ NSException* createAssertThatFailure(const char* fileName, int lineNumber, NSStr
 }   // namespace
 
 
+// As of 2010-09-09, the iPhone simulator has a bug where you can't catch
+// exceptions when they are thrown across NSInvocation boundaries. (See
+// dmaclach's comment at http://openradar.appspot.com/8081169 ) So instead of
+// using an NSInvocation to call failWithException:assertThatFailure without
+// linking in OCUnit, we simply pretend it exists on NSObject.
+@interface NSObject (HCExceptionBugHack)
+- (void)failWithException:(NSException *)exception;
+@end
+
+
 extern "C" {
 
 void HC_assertThatWithLocation(id testCase, id actual, id<HCMatcher> matcher,
@@ -84,15 +94,7 @@ void HC_assertThatWithLocation(id testCase, id actual, id<HCMatcher> matcher,
                         appendText:@", got "]
                         appendValue:actual];
         NSException* assertThatFailure = createAssertThatFailure(fileName, lineNumber, [description description]);
-
-        // Invoke [testCase failWithException:assertThatFailure] without linking OCUnit.
-        SEL selector = @selector(failWithException:);
-        NSMethodSignature* signature = [testCase methodSignatureForSelector:selector];
-        NSInvocation* invocation = [NSInvocation invocationWithMethodSignature:signature];
-        [invocation setTarget:testCase];
-        [invocation setSelector:selector];
-        [invocation setArgument:&assertThatFailure atIndex:2];        
-        [invocation invoke];
+        [testCase failWithException:assertThatFailure];
     }
 }
 
